--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Landy",
-  "name": "Landy - React Template",
+  "short_name": "Cordobeces",
+  "name": "Cordobeces - Córdoba Capital del HUMOR ⭐️⭐️⭐️",
   "icons": [
     {
       "src": "img/icons/logo192.png",
