--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "dependencies": {
     "@types/node": "^15.14.9",
     "@types/react": "^17.0.65",
-    "@types/react-dom": "^17.0.20",
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.27",
     "antd": "^4.24.14",
@@ -17,7 +16,7 @@
     "react-awesome-reveal": "^3.8.1",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
-    "react-router-dom": "^5.3.4",
+    "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.11",
     "typescript": "^4.9.5"
@@ -42,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-dom": "^18.2.7"
   }
 }
